--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -338,7 +338,11 @@ double ro\_calc & & {\prg chrgplt}\\
  \end{tabular}
 \end{center}   
 \end{table}
-
+ 
+Note, in case of non-orthogonal axes the convention for the components
+of the applied field $Ha, Hb,Hc$, the mean field, the magnetic moment 
+component etc. to be adopted in programming a single ion module is
+ $Hb||\vec b$, $Hc||(\vec a \times \vec b)$ and $Ha$ perpendicular to $Hb$ and $Hc$.
 
 
 {\bf Note for intermediate coupling simulations:} in case of intermediate coupling
