--- a/doc/graphic_display.tex
+++ b/doc/graphic_display.tex
@@ -92,7 +92,10 @@ scale\_view\_1,
 scale\_view\_2, scale\_view\_3}, and in
 the  .qev input file bye setting 
 {\prg spins\_wave\_amplitude, spins\_show\_ellipses, spins\_show\_direction\_of\_static\_moment}.
-
+                          Note, in case of non-orthogonal axes the convention 
+                           for applied field $Ha, Hb,Hc$ 
+                            is $Hb||\vec b$, $Hc||(\vec a \times \vec b)$ and $Ha$ perpendicular to $Hb$ and $Hc$.
+\
 Output files:
 \begin{enumerate}
   \item encapsulated postscript ps-file {\prg results/spins*.eps}, 
@@ -133,6 +136,9 @@ power point
 
 \subsection{Programs to calculate and display Charge-, Spin-, Moment- and Currentdensities
 of the unfilled shell}
+                          Note, in case of non-orthogonal axes the convention 
+                           for applied field $Ha, Hb,Hc$ 
+                            is $Hb||\vec b$, $Hc||(\vec a \times \vec b)$ and $Ha$ perpendicular to $Hb$ and $Hc$.
 
 \subsubsection{Chargedensity - {\prg display\_chargedensity\index{display\_chargedensity}},
 {\prg display\_chargedensities\index{display\_chargedensities}},
