--- a/doc/q_int.tex
+++ b/doc/q_int.tex
@@ -113,25 +113,26 @@ For a full list please refer to appendix~\ref{stevens}.
 
 \begin{table}[hb] 
 \begin{center}  
-\caption {Stevens operator equivalents $O_l^m$ and corresponding notation used in module {\prg %%@
-cfield\index{cfield}} 
-($J_{\pm}=J_x\pm iJ_y=J_c\pm iJ_a$ ). For a full list please refer to appendix~\ref{stevens}.}   
+\caption {Stevens operator equivalents $O_l^m$ and 
+corresponding notation used in modules {\prg cfield\index{cfield}} and 
+{\prg so1ion\index{so1ion}} 
+($J_{\pm}=J_x\pm iJ_y)$. For a full list please refer to appendix~\ref{stevens}.}   
 \label{olms}   
 \begin{tabular} 
-{lr} 
-Stevens Operator & Notation used in module {\prg cfield\index{cfield}} \\
+{lrr} 
+Stevens Operator & Notation used in module {\prg so1ion\index{so1ion}} & {\prg cfield\index{cfield}} \\
 \hline
 $O_{00}=1$ ($O_0^0(s)=0$) &\\
 \hline
-$O_{11}(s)=\frac{-i}{2}[J_+-J_-]=J_y$ &  $J_a$\\
-$O_{10}=J_z$  ($O_1^0(s)=0$) & $J_b$ \\
-$O_{11}=\frac{1}{2}[J_++J_-]=J_x$ &  $J_c$\\
+$O_{11}(s)=\frac{-i}{2}[J_+-J_-]=J_y$ &  $J_b$&  $J_a$\\
+$O_{10}=J_z$  ($O_1^0(s)=0$) & $J_c$&  $J_b$ \\
+$O_{11}=\frac{1}{2}[J_++J_-]=J_x$ &  $J_a$&  $J_c$\\
 \hline
-$O_{22}(s)=\frac{-i}{2}[J_+^2-J_-^2]=J_xJ_y+J_yJ_x$($=2P_{xy}$) & $J_d$ \\
-$O_{21}(s)=\frac{-i}{4}[(J_+-J_-)J_z+J_z(J_+-J_-)]=\frac{1}{2}[J_yJ_z+J_zJ_y]$($=P_{yz}$) & $J_e$ \\
-$O_{20}=[3J_z^2-J(J+1)]$ ($O_2^0(s)=0$) & $J_f$ \\
-$O_{21}=\frac{1}{4}[(J_++J_-)J_z+J_z(J_++J_-)]=\frac{1}{2}[J_xJ_z+J_zJ_x]$($=P_{xz}$) & $J_g$ \\
-$O_{22}=\frac{1}{2}[J_+^2+J_-^2]=[J_x^2-J_y^2]$ & $J_h$ \\
+$O_{22}(s)=\frac{-i}{2}[J_+^2-J_-^2]=J_xJ_y+J_yJ_x$($=2P_{xy}$) & $J_d$ & $J_d$ \\
+$O_{21}(s)=\frac{-i}{4}[(J_+-J_-)J_z+J_z(J_+-J_-)]=\frac{1}{2}[J_yJ_z+J_zJ_y]$($=P_{yz}$) & $J_e$& $J_e$  \\
+$O_{20}=[3J_z^2-J(J+1)]$ ($O_2^0(s)=0$) & $J_f$& $J_f$  \\
+$O_{21}=\frac{1}{4}[(J_++J_-)J_z+J_z(J_++J_-)]=\frac{1}{2}[J_xJ_z+J_zJ_x]$($=P_{xz}$) & $J_g$& $J_g$  \\
+$O_{22}=\frac{1}{2}[J_+^2+J_-^2]=[J_x^2-J_y^2]$ & $J_h$& $J_h$  \\
 \hline
  \end{tabular}
 \end{center}   
