manual update ic1ion

--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -649,20 +649,17 @@ harmonics) as:
   \hat{C}_{k,-|q|} \pm (-1)^{|q|} \hat{C}_{k,|q|} \right]
 \end{equation}
 
-\noindent and the matrix elements of these operators are given by {\bf 
-in the following equation there might be wrong; $L$ should be $L'$ 
-for some exponent of $(-1)$ and $J$ and $J'$ might have
-to be exchanged in the 3j symbol ???}
+\noindent and the matrix elements of these operators are given by 
 
 \begin{equation} \label{iccfmatel}
 \begin{array}{l}
-\langle \theta J m_J | \hat{C}_{kq} | \theta' J' m_J' \rangle = (-1)^{J-m_J}
-       \left( \begin{array}{ccc} J' & k & J \\ -m_J & q & m'_J \end{array} \right)
+\langle \theta J m_J | \hat{C}_{kq} | \theta' J' m_J' \rangle = \delta_{SS'} (-1)^{J-m_J}
+       \left( \begin{array}{ccc} J & k & J' \\ -m_J & q & m'_J \end{array} \right)
        \quad \langle l | \hat{c}_k | l \rangle  \\
- \quad \times n \sum_{\bar{\theta}} (\theta\{|\bar{\theta}) (\theta'\{|\bar{\theta})
+ \quad \times \nu \sum_{\bar{\theta}} (\theta\{|\bar{\theta}) (\theta'\{|\bar{\theta})
        \ \  (-1)^{\bar{L}+L+k+l} ([L][L'])^{\frac{1}{2}}
        \left\{ \begin{array}{ccc} L' & k & L \\ l & \bar{L} & l \end{array} \right\}  \\
- \quad \times \qquad\qquad\qquad\qquad\  (-1)^{S+L+k+J} ([J][J'])^{\frac{1}{2}}
+ \quad \times \qquad\qquad\qquad\qquad\  (-1)^{S+L'+k+J} ([J][J'])^{\frac{1}{2}}
        \left\{ \begin{array}{ccc} J' & k & J \\ L & S & L' \end{array} \right\}
 \end{array}
 \end{equation}
