manual updated, sipf2xcard improved

--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -91,6 +91,8 @@ $V_l^m$ in Elliott 1953~\cite{elliott53-387}
 \hline
 		&  Llm        & =           $              L_l^m $                                   & Wybourne \\
 \hline
+$\begin{array}{l}B^l_0 \\ B^l_m(c) \\ B^l_m(s) \end{array} $ in SPECTRE &        & =           $\left \{ \begin{array}{l}L_l^0 \\ L_l^m \\ -L_l^{-m} \end{array} \right .$ with $m>0$                                 & Wybourne \\
+\hline
 $B_m^l$ in Wybourne 1965~\cite{wybourne65}\footnote{Note that table 6-1 and equ 6-7 are not correct in this reference.}
 		&  Dlm        & =          $ \left \{ \begin{array}{lr} L_l^0 & m=0 \\
                                                                 (-1)^m(L_l^m-iL_l^{-m}) & m >0 \\ 
