Fixed minor errors in CF formulae in ic1ion/appendix.

--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -73,8 +73,8 @@ $A_l^m$ in Kassman 1970~\cite{kassman70-4118}  & & & \\
 $A_l^m$ in Abragam 1970~\cite{abragam70-1}  & & & \\
 \hline
 $B_l^m$ in Hutchings 1964~\cite{hutchings64-227}
-		&  Blm        & =           $ \left \{ \begin{array}{lr}  \lambda_{lm} L_l^m \langle J || \theta_l || J \rangle & {\rm  for rare earth} \\
-                                                                          \lambda_{lm} L_l^m \langle L || \theta_l || L \rangle & {\rm  for trans metals}
+		&  Blm        & =           $ \left \{ \begin{array}{lr}  \lambda_{lm} L_l^m \langle J || \theta_l || J \rangle & {\rm  for~rare~earth} \\
+                                                                          \lambda_{lm} L_l^m \langle L || \theta_l || L \rangle & {\rm  for~trans~metals}
 		                                       \end{array} \right .$                                  & Stevens \\                               
 
 $B_l^m$ in Jensen 1991~\cite{jensen91-1}  & & & \\
