--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -701,16 +701,16 @@ The orbital and spin operators have the same dependence on $m_J$, due to the Wig
 
 \begin{eqnarray}
 \bra{\theta Jm_J}(L,S)_{x,y}\ket{\theta'J'm_J'} &=& \frac{(-1)^{J-m_J}}{\sqrt{\pm 2}}
- \left[ \threej{J'&1&J}{-m_J&-1&m'_J} \mp \threej{J'&1&J}{-m_J&1&m'_J} \right] \\ \nonumber  
+ \left[ \threej{J&1&J'}{-m_J& 1&m'_J} \pm \threej{J&-1&J'}{-m_J&1&m'_J} \right] \\ \nonumber  
  && \qquad \times \bra{\theta J}|(L,S)||\ket{\theta'J'} \\
     \bra{\theta Jm_J}(L,S)_z\ket{\theta'J'm_J'} &=& (-1)^{J-m_J}
-    \threej{J'&1&J}{-m_J&0&m'_J} \bra{\theta J}|(L,S)|\ket{\theta'J'}
+    \threej{J&1&J'}{-m_J&0&m'_J} \bra{\theta J}|(L,S)|\ket{\theta'J'}
 \end{eqnarray}
 
 \noindent where the reduced matrix elements are:
 
 \begin{eqnarray} \label{eq:muredmat} \nonumber
-&&\bra{\theta J}|(L,S)|\ket{\theta'J'} = \delta_{\theta,\theta'} (-1)^{k+S+L+J} \sqrt{(2J+1)(2J'+1)} \\
+&&\bra{\theta J}|(L,S)|\ket{\theta'J'} = \delta_{\theta,\theta'} (-1)^{S+L+J} \sqrt{(2J+1)(2J'+1)} \\
 &&\;\;\times \sqrt{(L,S)((L,S)+1)(2(L,S)+1)} \sixj{J'&1&J}{ (L,S) &
 (S,L) & (L,S)'} 
 \end{eqnarray}
