Updated expression for mu operator in IC in manual.

--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -710,7 +710,7 @@ The orbital and spin operators have the same dependence on $m_J$, due to the Wig
 \noindent where the reduced matrix elements are:
 
 \begin{eqnarray} \label{eq:muredmat} \nonumber
-&&\bra{\theta J}|(L,S)|\ket{\theta'J'} = \delta_{\theta,\theta'} (-1)^{S+L+J} \sqrt{(2J+1)(2J'+1)} \\
+&&\bra{\theta J}|(L,S)|\ket{\theta'J'} = \delta_{\theta,\theta'} (-1)^{S+L+(J,J')} \sqrt{(2J+1)(2J'+1)} \\
 &&\;\;\times \sqrt{(L,S)((L,S)+1)(2(L,S)+1)} \sixj{J'&1&J}{ (L,S) &
 (S,L) & (L,S)'} 
 \end{eqnarray}
