Fixed bug in definition of moment operator
Bug was giving wrong intermultiplet transitions intensities.
Now define Cartesian operators as:
    (L,S)x =   [ (L,S)_{+1} - (L,S)_{-1} ] / sqrt(2)
    (L,S)y = -i[ (L,S)_{+1} + (L,S)_{-1} ] / sqrt(2)

--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -740,8 +740,8 @@ Y_{K'-1}^{Q}(\hat \mbf Q) \left (\frac{2K'+1}{K'+1}\right ) \right. \\
 ... these are the spherical components with $q=-1,0,1$, which are related to the cartesian components by
 
 \begin{eqnarray}
-\hat \mathcal Q_x &=& -\frac{1}{\sqrt{2}}(\hat \mathcal Q_{+1} -\hat \mathcal Q_{-1})\\
-\hat \mathcal Q_y &=& +\frac{i}{\sqrt{2}}(\hat \mathcal Q_{+1} +\hat \mathcal Q_{-1}) \\
+\hat \mathcal Q_x &=& +\frac{1}{\sqrt{2}}(\hat \mathcal Q_{+1} +\hat \mathcal Q_{-1})\\
+\hat \mathcal Q_y &=& -\frac{i}{\sqrt{2}}(\hat \mathcal Q_{+1} -\hat \mathcal Q_{-1}) \\
 \hat \mathcal Q_z &=& \hat \mathcal Q_0  \\
 \end{eqnarray}
 
