mcdisp_intcalc_beyond summation bug removed - see manual equation (105), removed not required matrices etc from mdcf class

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -66,12 +66,14 @@ community this program would not have come into existence.
 \subsection*{... in version 4.6...}
 
 - crystal field parameter notation for the low symmetry parameters
-  (m<0) BlmS and LlmS in so1ion/cfield/ic1ion/icf1ion
-  has been adapted to literature usage. In previous McPhase versions
+  (m<0) BlmS and LlmS in ic1ion/icf1ion were changed to be in accordance
+  with manual. In previous McPhase versions
   parameters with m<0 had a negative sign with respect to the
   standard definition,  now they have a positive sign as described 
   in chapter~\ref{cfparconventions}, where an overview on different
   crystal field parameter conventions used in literature is given.
+- going beyond dipole approximation in neutron spectroscopy option
+  has been changed correcting an error in equations (\ref{Xcalc}), (\ref{nunewcalc})
 
 \subsection*{... in version 4.5...}
  - a bug in mcphasit removed (which produced wrong output if magnetic structures are stabilized in a calculation involving a
