--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -1074,13 +1074,13 @@ the dynamical susceptibility $\chi_{\alpha\beta}^{ss'}({\mbf Q},\omega)$ we
 obtain $X_{\alpha''\beta''}^{ss'}({\mbf Q},\omega)$: 
 
 \begin{equation}\label{finalslow}
-X_{\alpha''\beta''}^{,,ss'}({\mbf Q},\omega)=\sum_{\alpha\alpha'\beta\beta'}
+X_{\alpha''\beta''}^{,,ss'}({\mbf Q},\omega)=\sum_{\alpha\beta}
 \sqrt{\frac{\Gamma^s}{\overline \gamma^s}}^{\star}
-\overline \mathcal V_{\alpha''\alpha'}^{s}
- \overline  \mathcal U_{\alpha'\alpha}^{s\dag} 
+\overline \mathcal V_{\alpha''1}^{s}
+ \overline  \mathcal U_{1\alpha}^{s\dag} 
     \chi_{\alpha\beta}^{,,ss'}({\mbf Q},\omega)
- \overline  \mathcal U_{\beta\beta'}^{s'} 
- \overline \mathcal V_{\beta'\beta''}^{s' \dag}
+ \overline  \mathcal U_{\beta1}^{s'} 
+ \overline \mathcal V_{1\beta''}^{s' \dag}
 \sqrt{\frac{\Gamma^{s'}}{\overline \gamma^{s'}}}
 \end{equation}
 
@@ -1109,8 +1109,8 @@ X^{,,ss'}_{\alpha\beta}(\mbf Q,\omega)=\sqrt{\Gamma^s}^\star\sqrt{\Gamma^{s'}}
 
 with 
 
-\begin{equation}
- \mathcal V^s_{\alpha1} =\sqrt{\frac{\gamma^s}{\overline \gamma^s}}^{\star}\sum_{\alpha'\alpha''} \overline \mathcal V_{\alpha\alpha'}^s \overline \mathcal U^{s\dag}_{\alpha'\alpha''}
+\begin{equation}\label{nunewcalc}
+ \mathcal V^s_{\alpha1} =\sqrt{\frac{\gamma^s}{\overline \gamma^s}}^{\star}\sum_{\alpha''} \overline \mathcal V_{\alpha1}^s \overline \mathcal U^{s\dag}_{1\alpha''}
 \mathcal U^s_{\alpha''1}
 \end{equation}
 
