--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -81,8 +81,8 @@ Here follows an example input file (see examples/ndcu2b\_new/mcdiff\index{mcdiff
 #
 #
 #             For some of the above options we need the Projection (=polarization of neutron beam) vector
-#! Pa=  1.0000   Components of Projection Vector P=(Pa * a + Pb * b + Pc *c)/Norm(Pa * a + Pb * b + Pc *c)
-#! Pb=  0.0000
+#! Pa=  1.0000   Components of Polarisation Vector in terms of lattice vectors P=(Pa * a + Pb * b + Pc *c)
+#! Pb=  0.0000   Note: the length of P, i.e. |P| indicates the degree of beam polarisation (|P|<=1)
 #! Pc=  0.0000
 #
 #
