updates in etract.pl mcdiff to put MSF.P/sin^2alpha formfactor in jjjpar warning if 2Np<l+2 myround at many places to easy testing

--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -67,11 +67,17 @@ Here follows an example input file (see examples/ndcu2b\_new/mcdiff\index{mcdiff
 #            9....|MSFdip.P|
 #            10....Re(MSFdip.P)
 #            11....Im(MSFdip.P)
-#            12....angl(Q,P)[Â°]
-#            13....i(MSF x MSF*).P
-#            14.... I+
-#            15.... I-
+#            12....angl(Q,P)[°]
+#            13....i(MSFxMSF*).P
+#            14....I+
+#            15....I-
 #            16....I+/I-
+#            17....i(MSFxMSF*)dip.P
+#            18....Idip+
+#            19....Idip-
+#            20....Idip+/Idip-
+#            21....2*|MSF.P|/sin^2(angl(Q,P)
+#            22....2*|MSFdip.P|/sin^2(angl(Q,P)
 #
 #           In the above the intensities I+ and I- are the spinflip and nonspineflip intensities
 #           in a polarised neutron experiment:
