--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -65,10 +65,14 @@ community this program would not have come into existence.
 
 \subsection*{... in version 4.6...}
 
+- mcdiff changed: polarisation vector P may be of length less than 1 enabling calculations for
+   less than 100\% beam polarisation, nat substituted by natcryst in mcdiff.in in order to
+  avoid confusion of number of atoms in crystal basis and number of magnetic atoms.
+- bugfix in average dmin option
 - crystal field parameter notation for the low symmetry parameters
-  (m<0) BlmS and LlmS in ic1ion/icf1ion were changed to be in accordance
+  ($m<0$) BlmS and LlmS in ic1ion/icf1ion were changed to be in accordance
   with manual. In previous McPhase versions
-  parameters with m<0 had a negative sign with respect to the
+  parameters with $m<0$ had a negative sign with respect to the
   standard definition,  now they have a positive sign as described 
   in chapter~\ref{cfparconventions}, where an overview on different
   crystal field parameter conventions used in literature is given.
@@ -109,11 +113,6 @@ for the beyond dipole calculation in older versions of mcdisp)
 - neutron magnetic formfactors (j0,j2,j4,j6)  are now calculated directly from the radial wavefunction instead of the 
 formfactor parameters. New programs formfactor and radwavfunc to evaluate formfactors and radial wave functions.
 some bugs for ic1ion d9 configuration removed
-
-\subsection*{... in version 3.8/3.9 ...}
-
-{\prg mcdiff}\index{mcdiff} has been extended to be able to output real and imaginary parts of nuclear and
-magnetic structure factors and flipping ratios. This is convenient for the analysis of polarized neutron diffraction experiments.
 
 \newpage
 
